# AM-radio

./: .gitignore  acknowledgement.tex  dekitakoto.tex  evaluation.tex  gen.py  goal.tex  mistake.tex  pyproject.toml  report.tex  seinou.tex  share.tex  sorezore.tex  theory.tex
bib/: reference.bib  sieicej.bst
data/: 3V.txt  5V.txt  data.xlsx  diode.txt  sin.txt  ~$data.xlsx
fig/: fig.drawio
python/: crop_pdf.py  fig.drawio  g.py  gen.py  graph.py  list.py  make_diagram.py  make_graph.py  sokutei.py
python/new/: scope_0.csv  scope_1.csv  scope_10.csv  scope_11.csv  scope_12.csv  scope_13.csv  scope_14.csv  scope_15.csv  scope_16.csv  scope_17.csv  scope_18.csv  scope_19.csv  scope_2.csv  scope_20.csv  scope_21.csv  scope_22.csv  scope_23.csv  scope_24.csv  scope_25.csv  scope_26.csv  scope_27.csv  scope_28.csv  scope_29.csv  scope_3.csv  scope_30.csv  scope_31.csv  scope_32.csv  scope_33.csv  scope_34.csv  scope_35.csv  scope_36.csv  scope_37.csv  scope_38.csv  scope_39.csv  scope_4.csv  scope_40.csv  scope_41.csv  scope_42.csv  scope_43.csv  scope_44.csv  (+17 more)
style/: eee.sty  jlisting.sty
