[tool.poetry]
name = "AM-radio"
version = "0.1.0"
description = ""
authors = ["m20079 <108270961+m20079@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^3.8.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
japanize-matplotlib = "^1.1.3"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
scienceplots = "^2.1.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
